--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "express": "^4.18.1",
     "mocha": "^10.0.0",
     "mongoose": "^6.4.1",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "path": "^0.12.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
