--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "start": "cd client && npm start && cd .. & nodemon server/index.js",
+    "start": "nodemon server/index.js",
     "test": "mocha server/index.test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "chai": "^4.3.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mocha": "^10.0.0",
