--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "start": "nodemon server/api/index.js",
-    "test": "mocha server/api/index.test.js"
+    "start": "nodemon server/api/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +12,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
-    "chai": "^4.3.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mocha": "^10.0.0",
     "mongoose": "^6.4.1",
     "nodemon": "^2.0.18",
     "path": "^0.12.7",
